--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-google-cloud-aiplatform>=1.27.0
-vertexai
-google-cloud-storage
-pandas
-jsonlines
-plotly
-tqdm
-rouge-score
-PyYAML
+attrs==24.2.0
+jsonlines==4.0.0
