--- a/configs/project.yml
+++ b/configs/project.yml
@@ -1,3 +1,5 @@
-project_id: 'your-google-cloud-project-id'
-location: 'us-central1'
-bucket_name: 'your-bucket-name'
+project:
+  project_id: 'your-google-cloud-project-id'
+  location: 'us-central1'
+  bucket_name: 'your-bucket-name'
+  credentials_path: '/path/to/credentials.json'
