--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 attrs==24.2.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 docstring_parser==0.16
 google-api-core==2.20.0
 google-auth==2.35.0
@@ -18,7 +20,9 @@ grpc-google-iam-v1==0.13.1
 grpcio==1.66.1
 grpcio-status==1.66.1
 idna==3.10
+joblib==1.4.2
 jsonlines==4.0.0
+nltk==3.9.1
 numpy==2.1.1
 packaging==24.1
 pandas==2.2.3
@@ -31,10 +35,13 @@ pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
+rouge_score==0.1.2
 rsa==4.9
 shapely==2.0.6
 six==1.16.0
+tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
