updating data prep

--- a/configs/gemini_1_5/dataset.yml
+++ b/configs/gemini_1_5/dataset.yml
@@ -1,4 +1,4 @@
 dataset:
-  train_dataset_path: 'gs://your-bucket/train/sft_train_samples.jsonl'
-  validation_dataset_path: 'gs://your-bucket/val/sft_val_samples.jsonl'
-  test_dataset_path: 'data/sft_test_samples.csv'
+  train_dataset_path: 'gs://vai-finetuning-llms/gemini_1_5/train/sft_train_samples.jsonl'
+  validation_dataset_path: 'gs://vai-finetuning-llms/gemini_1_5/val/sft_val_samples.jsonl'
+  test_dataset_path: './data/gemini_1_5/sft_test_samples.csv'
