--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 docstring_parser==0.16
+fonttools==4.54.1
 google-api-core==2.20.0
 google-auth==2.35.0
 google-cloud-aiplatform==1.67.1
@@ -22,10 +25,13 @@ grpcio-status==1.66.1
 idna==3.10
 joblib==1.4.2
 jsonlines==4.0.0
+kiwisolver==1.4.7
+matplotlib==3.9.2
 nltk==3.9.1
 numpy==2.1.1
 packaging==24.1
 pandas==2.2.3
+pillow==10.4.0
 plotly==5.24.1
 proto-plus==1.24.0
 protobuf==5.28.2
@@ -33,6 +39,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
