--- a/configs/gemma_2/deployment.yml
+++ b/configs/gemma_2/deployment.yml
@@ -1,4 +1,5 @@
-machine_type: "g2-standard-8"
-accelerator_type: "NVIDIA_L4"
-accelerator_count: 1
-use_dedicated_endpoint: false
+deployment:
+  machine_type: g2-standard-12
+  accelerator_type: NVIDIA_L4
+  accelerator_count: 1
+  use_dedicated_endpoint: false
